--- a/app/views/users/credits.scala.html
+++ b/app/views/users/credits.scala.html
@@ -23,153 +23,176 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             <!--nav  end -->
             <div class="user-bd clearfix">
                 <div class="user-main">
-                <div class="feeds-list box-shadow">
-                <div class="dongtai-title">
-                    <b>我的最近动态</b>
-                    <a href="/f" class="bbl-btn" title="看看好友在逛什么">看看好友在逛什么</a>
-                </div>
+                <div class="main box-shadow plr15">
+                    <div class="main-title clearfix">
 
-                <div class="clearfix pt20 pb20">
-                    <div class="pagin fr pagination" id="J_Pagination">
-                        <span class="current">1</span>
-                        <a href="">2</a>
-                        <a href="">3</a>
-                        <a href="">4</a>
+                        <h2>
+                            最近30天浏览的宝贝
 
-                        <a title="下一页" href="" class="next">下一页</a>
+                            <span class="ml5 mr5">|</span>
+                            <a href="/user/2/baobei?t=love">  返利成功的宝贝 </a>
+                        </h2>
+                    </div>
+                    <div class="credits-list">
+
+
+                            <div class="credits-item clearfix">
+
+                                <div class="credits-detail">
+                                    <div class="con">
+
+                                        <div class="fd-baobei fd-media clearfix">
+                                            <div class="pic">
+                                                <a href="/baobei/1968827" target="_blank" title="龙眼蜜 桂圆蜜 纯天然蜂蜜">
+                                                    <img src="http://s3.img.guang.com/p/1652797_1_8620359_210X210.jpg" alt="龙眼蜜 桂圆蜜 纯天然蜂蜜" width="120">
+                                                </a>
+                                            </div>
+                                            <dl class="info">
+                                                <dt><h3 class="title ofh"> 玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯</h3></dt>
+                                                <dd class="clearfix">
+                                                    <div class="price">
+                                                        价格：
+                                                        <span class="price-promotion"> ¥200.00 </span>
+                                                        <span class="price-normal"> ¥200.00 </span>
+
+                                                    </div>
+                                                    <div class="volume">
+                                                        30天已售 3
+                                                    </div>
+                                                </dd>
+
+                                                <dd>返利:&nbsp;<span> 2100</span>&nbsp;<a href="/jifenbao">个集分宝</a>，值<span>21.0</span>元返利比例:<span>10.5</span>%</dd>
+
+
+
+                                            </dl>
+                                            <div class="time">
+                                                跟踪时间:2013-09-04
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+                        <div class="clearfix pt20 pb20">
+                            <div class="pagin fr pagination" id="J_Pagination">
+                                <span class="current">1</span>
+                                <a href="">2</a>
+                                <a href="">3</a>
+                                <a href="">4</a>
+
+                                <a title="下一页" href="" class="next">下一页</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                </div>
-                </div>
+              </div>
+
                 <div class="user-side">
-                    <div class="feeds box-shadow plr15 ss">
-                        <div class="title"><a href="/f" class="all-follows" target="_blank">全部</a>我的好友动态</div>
-                        <ul>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">时尚简约个性布艺沙发</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">多功能折叠皮艺沙发</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">法式乡村风情家居摆饰 简洁小担架 三玻璃杯插花器</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">周家庄布艺单人旋转沙发椅</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">宜家简约全棉AB条纹床品四件套</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">简约田园藤编球型沙发</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">日式实木简约布艺沙发</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">宜家时尚简约书柜电脑桌</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">春色简约餐桌椅组合</a></span>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="user-pic" style="height:50px;">
-                                    <a href="" target="_blank">
-                                        <img src="/ui/front/user-5.jpg" width="50" alt="白水煮一切" title="白水煮一切">
-                                    </a>
-                                </div>
-                                <div class="user-news">
-                                    <span class="mr5">喜欢 <a href="" target="_blank">小矮人家居装饰品摆件简约家居饰品装饰品工艺品新房摆件</a></span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--user side feeds end-->
-                    <div class="friend-comment box-shadow plr15 ss">
-                        <div class="title">我的好友正在讨论...</div>
-                        <ul>
-                            <p class="gc pb10 pt10">还没有好友的讨论</p>
+                    <div class="interest box-shadow plr15 ss">
+                        <div class="title">做多浏览的宝贝 </div>
+                        <ul class="interPer" id="J_InterPer">
+
                             <li>
-                                <div class="comment-pic">
-                                    <a href="" title="阿布大人" target="_blank">
-                                        <img src="/ui/front/user-7.jpg" width="30" height="30" alt="阿布大人" title="阿布大人">
-                                    </a>
+                                <div class="user-pic">
+                                    <a href="/user/3" title="duanyu200888" target="_blank">
+                                        <img src="/images/user/default.jpg" width="50" height="50" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="comment-con">
-                                    <p class="top">
-                                        <a href="" target="_blank">【活动结束】“天使爱...</a>
-                                    </p>
-                                    <p class="btm">
-                                        <a href="" target="_blank">美容美体</a><span class="mr5 ml5">/</span><a href="" target="_blank">432条回复</a>
-                                    </p>
-                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/3" title="duanyu200888"><em class="ofh">duanyu200888</em> </a>
+
+                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="duanyu200888" data-followtype="5" data-userid="3">加关注</a></div>
                             </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/4" title="食美特" target="_blank">
+                                        <img src="http://tp4.sinaimg.cn/1283431903/50/22817194445/1" width="50" height="50" alt="食美特" title="食美特"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/4" title="食美特"><em class="ofh">食美特</em> </a>
+
+                                    <p>来自新浪微博</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="食美特" data-followtype="5" data-userid="4">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/7" title="残缺的翅膀 " target="_blank">
+                                        <img src="http://qzapp.qlogo.cn/qzapp/100344510/9607B9C8276EEAA331DB668E28E66D51/50" width="50" height="50" alt="残缺的翅膀 " title="残缺的翅膀 "></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/7" title="残缺的翅膀 "><em class="ofh">残缺的翅膀 </em> </a>
+
+                                    <p>来自腾讯QQ</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="残缺的翅膀 " data-followtype="5" data-userid="7">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/8" title="793869346" target="_blank">
+                                        <img src="/images/user/default.jpg" width="50" height="50" alt="793869346" title="793869346"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/8" title="793869346"><em class="ofh">793869346</em> </a>
+
+                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="793869346" data-followtype="5" data-userid="8">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/11" title="ktluxing" target="_blank">
+                                        <img src="/images/user/default.jpg" width="50" height="50" alt="ktluxing" title="ktluxing"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/11" title="ktluxing"><em class="ofh">ktluxing</em> </a>
+
+                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="ktluxing" data-followtype="5" data-userid="11">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/12" title="craven0571" target="_blank">
+                                        <img src="/u/default.jpg" width="50" height="50" alt="craven0571" title="craven0571"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/12" title="craven0571"><em class="ofh">craven0571</em> </a>
+
+                                    <p>来自淘宝</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="craven0571" data-followtype="5" data-userid="12">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/13" title="piao-1984" target="_blank">
+                                        <img src="/images/user/default.jpg" width="50" height="50" alt="piao-1984" title="piao-1984"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/13" title="piao-1984"><em class="ofh">piao-1984</em> </a>
+
+                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="piao-1984" data-followtype="5" data-userid="13">加关注</a></div>
+                            </li>
+
+                            <li>
+                                <div class="user-pic">
+                                    <a href="/user/14" title="qzuser" target="_blank">
+                                        <img src="http://qzapp.qlogo.cn/qzapp/111111/942FEA70050EEAFBD4DCE2C1FC775E56/50" width="50" height="50" alt="qzuser" title="qzuser"></a>
+                                </div>
+                                <div class="user-info">
+                                    <a class="username g-daren" href="/user/14" title="qzuser"><em class="ofh">qzuser</em> </a>
+
+                                    <p>来自腾讯QQ</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="qzuser" data-followtype="5" data-userid="14">加关注</a></div>
+                            </li>
+
                         </ul>
                     </div>
+                    <!--user side credits end-->
+
                 </div>
+                </div>
+
             </div>
         </div>
         }{
