--- a/app/views/users/square.scala.html
+++ b/app/views/users/square.scala.html
@@ -135,9 +135,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     <!-- end-->
                 </div>
                 <div class="user-side">
-                    <div class="tj-topic box-shadow">
+                    <div class="topic-side box-shadow">
                         <h3><a href="@controllers.routes.Forums.forum(1)" class="rw" target="_blank">更多&gt;</a>热门话题</h3>
-                        <ul class="friend-comment">
+                        <ul class="topic-comment">
                             @for((uid,uname,upic,cid,cTitle,cReplyNum,cLoveNum,cHotIndex)<-topics){
                             <li>
                                 <div class="comment-pic">
